# cv-disparity

./: Cargo.toml
bench/: mcmanamon.rs
src/: disparity.rs  error.rs  lib.rs  magdeburg.rs  mcmanamon.rs
tests/: gen_from_imgs.rs  simple_rocks.rs  stereo_bench.rs  stereo_bench_drh_01.toml
